# ProjectedNewton

./: .gitignore  CMakeLists.txt  desai_symmd.c  main.cpp  profile.cpp  projected_newton.cpp  projected_newton.hpp
autodiff/: forward_diff.c  forward_hessian.c  reverse_diff.c
